<resources>
    <string name="app_name">HelloApp</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_title">Vintage Blue Jacket #48</string>
    <string name="size">Size</string>
    <string name="xl">XL</string>
    <string name="color">Color</string>
    <string name="color_value">Vintage Blue</string>
    <string name="price">Price</string>
    <string name="welcome">Welcome</string>
    <string name="continue_title">Continue</string>
</resources>
